--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.23.5"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
