--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.9.0",
     "lucia": "^3.2.0",
     "next": "14.2.3",
     "react": "^18",
