--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isomorphic-dompurify": "^2.9.0",
     "lucia": "^3.2.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.3.0",
